# imstilltrying

./: .gitignore  CMakeLists.txt  generic-mesh.frag  generic-mesh.vert
src/: camera.hpp  chunks.hpp  main.cpp  mesh.hpp  mesher.hpp  shader.hpp  vars.hpp
